# eternal-forge

./: .gitignore  Cargo.toml  README.md
arcane-vault/: Cargo.toml
arcane-vault/src/: lib.rs
arcane-vault/src/application/service/: mod.rs  signup_app.rs  signup_service.rs  user_app.rs  user_service.rs  user_service_app.rs
arcane-vault/src/domain/: error.rs  mod.rs
arcane-vault/src/domain/service/: signup_service.rs  user_service.rs
arcane-vault/src/infrastructure/: mod.rs  utility.rs
arcane-vault/src/infrastructure/repository/: db_context.rs  mod.rs  repository.rs  sql.rs  user_repository.rs
ethereal-core/: Cargo.toml  build.rs
ethereal-core/proto/: signup.proto  user.proto  user_profile.proto
ethereal-core/src/: lib.rs
ethereal-core/src/configuration/: mod.rs  toml_config.rs
ethereal-core/src/proto/: mod.rs  signup.rs  user.rs  user_profile.rs
resource/: Design.xlsx  ~$Design.xlsx
sacred-gate/: Cargo.toml
sacred-gate/src/: main.rs
sacred-gate/src/domain/service/: user_service.rs
sacred-gate/src/service/: signup_service.rs  user_service.rs
script/: easynote.sql  easynote_common.sql  easynote_initialize.sql  easynote_note.sql  easynote_testing_code.sql
setting/: Config.toml  settting.toml
sorcerers-kit/: Cargo.toml
