[package]
name = "arcane-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
prost-types = "0.13.5"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "*", features=["with-uuid-1", "with-serde_json-1"]}
ethereal-core = { path = "../ethereal-core" }
async-trait = "0.1.80"

