[package]
name = "arcane-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
prost-types = "0.13.5"
uuid = { version = "1.17.0", features = ["v4"] }
tonic = { version = "0.13.1", features = ["transport"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features=["with-uuid-1", "with-serde_json-1"]}
deadpool-postgres = { version = "0.10", features = ["serde"] }
ethereal-core = { path = "../ethereal-core" }
async-trait = "0.1.80"

