[package]
name = "ethereal-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
config = "0.15.11"
toml = "0.8.23"
serde = "1.0.219"
once_cell = "1.21.3"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }