[package]
name = "sacred-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
tonic = { version = "0.13.1", features = ["transport"] }
tonic-reflection = { version = "0.13.1" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
ethereal-core = { path = "../ethereal-core" }
arcane-vault = { path = "../arcane-vault" }